--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,4 +23,19 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  height: 100%;
+}
+
+input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+input:focus {
+  outline: none;
+}
+
+.custom-input {
+  @apply block rounded border border-gray-300 p-2 invalid:text-pink-500 invalid:ring-2 invalid:ring-pink-500 focus:ring-2 focus:ring-blue-300 focus:invalid:ring-pink-500;
 }
